# new_date_time_units_and_formats

./: .auto_version_from_date.json  .gitignore  Cargo.toml  Makefile.toml  README.md  cache40.txt  lmakeversionfromdate.json
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/new_date_time_units_and_formats/: all.html  constant._ASSERT.html  fn.__wasm_bindgen_generated_wasm_bindgen_start.html  fn.cnv_on_click.html  fn.convert.html  fn.div_backspace_on_click.html  fn.div_c_on_click.html  fn.div_cell_multi_value_on_click.html  fn.div_cell_on_click.html  fn.div_now_on_click.html  fn.menu_on_click.html  fn.modal_02_close_on_click.html  fn.set_event_handlers.html  fn.toolbar_on_click.html  fn.wasm_bindgen_start.html  index.html  macro.on_click.html  sidebar-items.js
docs/new_date_time_units_and_formats/web_sys_mod/: fn.debug_write.html  fn.get_element_by_id.html  fn.get_html_element_by_id.html  fn.get_text.html  fn.modal_close.html  fn.modal_open.html  fn.set_text.html  fn.window.html  index.html  sidebar-items.js
docs/src/new_date_time_units_and_formats/: lib.rs.html  web_sys_mod.rs.html
src/: fullweek_millis_mod.rs  lib.rs  veeks_millis_mod.rs  web_sys_mod.rs
tmp/: temp40.txt
web_server_folder/new_date_time_units_and_formats/: index.html  manifest.json  new_calendar_forever.ods  service_worker.js
web_server_folder/new_date_time_units_and_formats/css/: new_date_time_units_and_formats.css
