[package]
name = "new_date_time_units_and_formats"
version = "2021.205.1219"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "my proposal for a new date time units and formats"
repository = "https://github.com/bestia-dev/new_date_time_units_and_formats"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["date-and-time"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
# my crates from crates.io
veeks_millis = "0.5.5"

# third party crates
unwrap = "1.2.1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
chrono = "0.4.19"
regex = "1"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "ErrorEvent",
  "Headers",
  "HtmlAudioElement",
  "HtmlElement",
  "HtmlHtmlElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Response",
  "Screen",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
panic = "abort"
